kubernetes/cluster/extras/couchdb/ingress-auth.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchdb-utils
  namespace: extras
  labels:
    app.kubernetes.io/name: couchdb-utils
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/auth-response-headers: >-
      Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid,authorization 
    nginx.ingress.kubernetes.io/auth-signin: >-
      https://couchdb-utils.brhd.io/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
    nginx.ingress.kubernetes.io/auth-url: >-
      http://authentik-outpost-embedded.default.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
spec:
  rules:
    - host: couchdb-utils.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /_utils
            backend:
              service:
                name: couchdb-svc-couchdb
                port:
                  number: 5984
  tls:
    - hosts:
        - couchdb-utils.brhd.io
